--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Icone da aba de titulo -->
+    <link rel="shortcut icon" type="imagex/png" href="../IMG/fighter-jet-solid.svg">
+
     <title>Projeto COD</title>
 </head>
 <body>
